@@ -1,6 +1,7 @@
 package ru.practicum.shareit.request.dto;
 
 import org.springframework.stereotype.Component;
+import ru.practicum.shareit.item.dto.ItemDtoOut;
 import ru.practicum.shareit.item.dto.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.request.model.Request;
@@ -8,6 +9,10 @@ import ru.practicum.shareit.user.dto.UserMapper;
 import ru.practicum.shareit.user.model.User;
 
 import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 public class RequestMapper {
@@ -17,10 +22,12 @@ public class RequestMapper {
         out.setDescription(request.getDescription());
         out.setCreated(request.getCreated());
         out.setRequestor(UserMapper.toDto(request.getRequestor()));
-        Collection<Item> i = request.getItems();
-        out.setItems(i.stream()
+        List<ItemDtoOut> itemDto = Optional.ofNullable(request.getItems())
+                .orElse(Collections.emptyList())
+                .stream()
                 .map(ItemMapper::toOut)
-                .toList());
+                .collect(Collectors.toList());
+        out.setItems(itemDto);
         return out;
     }
 
